# PinPal

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  ENGINEERING_STANDARDS.md  EVENT_CONTRACTS.md  INTEGRATION_PATTERNS.md  PRIVACY_SHARING.md  PROJECT_SPEC.md  WORK_PLAN.md
docs/ADRs/: ADR-0001-architecture.md  ADR-0002-ingestion-pipeline.md
src/pinpal/: __init__.py  config.py  logging.py
src/pinpal/api/: app.py  deps.py  health.py  schemas.py
src/pinpal/api/routers/: __init__.py  evidence.py  facts.py  groups.py  imports.py  persons.py  relationships.py  timeline.py  users.py
src/pinpal/core/: __init__.py  services.py
src/pinpal/db/: __init__.py  base.py  enums.py  models.py  session.py
src/pinpal/db/migrations/: env.py
src/pinpal/db/migrations/versions/: 001_core_graph.py  002_facts.py
src/pinpal/events/: __init__.py  envelope.py  pipeline.py  router.py  types.py
src/pinpal/events/handlers/: __init__.py  fact.py  group.py  identity.py  membership.py  observation.py
src/pinpal/events/translators/: __init__.py  instagram.py  manual.py  whatsapp.py
src/pinpal/mongo/: __init__.py  client.py  indexes.py  repositories.py  schemas.py
src/pinpal/workers/: __init__.py
tests/: conftest.py  test_api_evidence.py  test_api_facts.py  test_api_groups.py  test_api_imports.py  test_api_persons.py  test_api_relationships.py  test_api_timeline.py  test_api_users.py  test_event_envelope.py  test_event_router.py  test_health.py  test_models.py  test_mongo_repositories.py  test_mongo_schemas.py  test_translators.py  test_why_service.py
