[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinpal"
version = "0.1.0"
description = "Explainable relationship memory — remember where you know people from"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "motor>=3.6,<4",
    "pydantic-settings>=2.7,<3",
    "email-validator>=2.1,<3",
    "structlog>=24.4,<26",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pinpal"]

# ---------- ruff ----------
[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["pinpal"]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
exclude = ["alembic", "migrations"]

[[tool.mypy.overrides]]
module = ["motor.*", "pymongo.*"]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires running Docker services (Postgres, MongoDB)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
]
